--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    background-color: #444444;
+    color: #FAFAFA;
+}
+
+.text {
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #AAAAAA;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+#root {
+    height: 100%;
+}
+
+ol, ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-color: #444444;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*@media (max-width: 425px) {*/
+/*    .text {*/
+/*        font-size: 10px;*/
+/*        line-height: 14px;*/
+/*    }*/
+/*}*/
+
+.swiper {
+    width: 100%;
+    height: 100% !important;
+}
+
+.swiper-slide {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+div.swiper-pagination {
+    position: fixed;
+    right: 0;
+    bottom: 20px !important;
+}
+
+span.swiper-pagination-bullet {
+    width: 150px;
+    height: 8px;
+    border-radius: 8px;
+    background: #777777;
+}
+
+span.swiper-pagination-bullet-active {
+    background: #139EEF;
+}
+
+
