--- a/src/screens/SelfieScreen/SelfieScreen.module.css
+++ b/src/screens/SelfieScreen/SelfieScreen.module.css
@@ -3,6 +3,6 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 90px;
-    padding: 0 20px 60px;
+    padding-bottom: 60px;
     width: 100%;
 }
