--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,10 @@ code {
     height: 100% !important;
 }
 
+.swiper-wrapper {
+    padding-bottom: 30px;
+}
+
 .swiper-slide {
     text-align: center;
     display: -webkit-box;
@@ -85,7 +89,10 @@ code {
 div.swiper-pagination {
     position: fixed;
     right: 0;
-    bottom: 20px !important;
+    bottom: 0 !important;
+    background-color: #444444;
+    padding-bottom: 20px;
+    padding-top: 15px;
 }
 
 span.swiper-pagination-bullet {
