--- a/src/screens/SelfieScreen/SelfieScreen.module.css
+++ b/src/screens/SelfieScreen/SelfieScreen.module.css
@@ -6,3 +6,20 @@
     padding-bottom: 60px;
     width: 100%;
 }
+
+.video {
+    border-radius: 100%;
+    height: 350px;
+}
+
+.face {
+    border-color: #2AC178;
+}
+
+.box {
+    position: relative;
+}
+
+.background {
+    position: absolute;
+}
