--- a/src/components/Passport/Passport.module.css
+++ b/src/components/Passport/Passport.module.css
@@ -14,6 +14,12 @@
     line-height: 20px;
 }
 
+.errorImage {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
 .margin {
     margin-bottom: 25px;
 }
