--- a/src/screens/SelfieScreen/SelfieScreen.module.css
+++ b/src/screens/SelfieScreen/SelfieScreen.module.css
@@ -2,14 +2,13 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 90px;
+    margin-top: 80px;
     padding-bottom: 60px;
     width: 100%;
 }
 
 .video {
     border-radius: 100%;
-    height: 350px;
 }
 
 .face {
@@ -22,4 +21,16 @@
 
 .background {
     position: absolute;
+}
+
+.title, .subtitle {
+    text-align: center;
+}
+
+.title {
+    margin-bottom: 8px;
+}
+
+.subtitle {
+    margin-bottom: 25px;
 }
