--- a/src/components/SelfieCheck/SelfieCheck.module.css
+++ b/src/components/SelfieCheck/SelfieCheck.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 90px;
-    padding: 0 20px 40px;
+    padding: 0 0 40px;
     width: 100%;
 }
 
