--- a/src/index.css
+++ b/src/index.css
@@ -71,19 +71,7 @@ code {
 }
 
 .swiper-slide {
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+    min-height: calc(100vh - 90px) !important;
 }
 
 div.swiper-pagination {
