--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,33 +1,66 @@
-.button {
+.burger {
+    padding: 0 0 0 16px;
+    margin-bottom: 45px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    max-width: 120px;
-    height: 36px;
-    width: 100%;
+    width: 100px;
+    height: 32px;
     background-color: #FAFAFA;
-    color: #444444;
-    border-radius: 100px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
     border: none;
+    border-radius: 100px;
+    outline: none;
     cursor: pointer;
+    position: relative;
+    transition: all 0.2s linear;
+    z-index: 6;
+}
+
+.burger.active {
+    width: 32px;
+    padding-left: 8px;
+}
+
+.burger.active .line {
     position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 3;
+    top: 15px;
+    left: 8px;
 }
 
-.button.opened {
-    max-width: 36px;
-    padding: 0;
+.burger.active .line:first-child {
+    transform: rotate(45deg);
 }
 
-.button.opened img {
-    margin-right: 0;
+.burger.active .line:nth-child(2) {
+    transform: rotate(-45deg);
 }
 
-.button img {
-    margin-right: 10px;
+.burger.active .line:last-child {
+    display: none;
+}
+
+.burger.active .text {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s linear;
+}
+
+.line {
+    display: block;
+    width: 17px;
+    height: 2px;
+    background-color: #444444;
+    transition: transform 0.2s linear;
+}
+
+.line:not(:last-child) {
+    margin-bottom: 3px;
+}
+
+.text {
+    margin-top: 1px;
+    transition: all 0.2s linear;
+    font-weight: 600;
+    font-size: 16px;
+    color: #444444;
+    margin-left: 8px;
 }
