--- a/src/components/Badge/Badge.module.css
+++ b/src/components/Badge/Badge.module.css
@@ -1,12 +1,14 @@
 .root {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 12px;
   line-height: 14px;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: #fafafa;
   border-radius: 14px;
   padding: 6px 12px;
-  width: 30px;
   text-align: center;
 }
 
