--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,46 @@
+@import './styles/reset.css';
+@import './styles/fonts.css';
+
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
     background-color: #727272;
     color: #FAFAFA;
+    font-family: 'TT_Norms_Pro_Regular', sans-serif;
+    font-weight: 400;
+}
+
+.app {
+    min-height: calc(100vh - 30px);
+    padding: 30px 20px;
+}
+
+.mt-30 {
+    margin-top: 30px !important;
+}
+
+.m-0 {
+    margin: 0 !important;
+}
+
+.video {
+    width: 500px;
+    height: 350px;
+    object-fit: cover;
+    border: 6px solid #139EEF;
+    border-radius: 12px;
+    margin: 0 auto;
 }
 
 .text {
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #AAAAAA;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 12px;
     line-height: 16px;
 }
-
-#root {
-    height: 100%;
-}
-
-ol, ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 5;
-    width: 100%;
-    height: 100%;
-    background-color: #444444;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/*@media (max-width: 425px) {*/
-/*    .text {*/
-/*        font-size: 10px;*/
-/*        line-height: 14px;*/
-/*    }*/
-/*}*/
 
 .swiper {
     width: 100%;
@@ -71,20 +52,22 @@ code {
 }
 
 .swiper-slide {
-    min-height: calc(100vh - 90px) !important;
+    min-height: calc(100vh - 167px) !important;
 }
-
 div.swiper-pagination {
+    display: flex;
+    justify-content: center;
     position: fixed;
     right: 0;
     bottom: 0 !important;
     background-color: #444444;
-    padding-bottom: 20px;
-    padding-top: 15px;
+    padding: 15px 20px 20px;
 }
 
+
 span.swiper-pagination-bullet {
-    width: 150px;
+    max-width: 165px;
+    width: 100%;
     height: 8px;
     border-radius: 8px;
     background: #777777;
@@ -100,7 +83,7 @@ span.swiper-pagination-bullet-active {
 }
 
 .title {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 32px;
     line-height: 1;
     margin-bottom: 8px;
@@ -110,4 +93,16 @@ span.swiper-pagination-bullet-active {
     font-size: 16px;
     line-height: 1.5;
     margin-bottom: 25px;
+}
+
+@media (max-width: 768px) {
+    .video {
+        width: 340px;
+    }
+}
+
+@media (max-width: 425px) {
+    .video {
+        width: 290px;
+    }
 }
